// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should have two different levels of headings 1`] = `
.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 12px;
}

.c4::after,
.c4::before {
  position: absolute;
  top: 50%;
  display: block;
  width: 10px;
  height: 2px;
  background-color: currentColor;
  -webkit-transition: -webkit-transform 0.25s ease,-webkit-transform 0.25s ease;
  -webkit-transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  content: "";
}

.c4::before {
  left: 4px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

[aria-expanded="true"] .c4::before,
[aria-selected="true"] .c4::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c4::after {
  right: 4px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

[aria-expanded="true"] .c4::after,
[aria-selected="true"] .c4::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c2 + .c1 {
  border-top: 1px solid #c9d3df;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c3:hover,
.c3:focus,
.c3:focus-within,
.c3[aria-expanded="true"] {
  color: #005994;
}

.c5 {
  padding: 1rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c5.accordion__body--hidden {
  display: none;
}

.c0 {
  margin-bottom: 2rem;
}

<div>
  <h2>
    titre 0
  </h2>
  <p>
    paragraphe 0
  </p>
  <div
    class="c0"
    data-accordion-component="Accordion"
  >
    <div
      class="c1 c2"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-0"
          aria-disabled="false"
          aria-expanded="false"
          class="c3"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-0"
          role="button"
          tabindex="0"
        >
          <h2>
            titre 1
          </h2>
          <div
            class="c4"
            role="presentation"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-0"
        class="c5"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-0"
      >
        <p>
          paragraphe 1-1
        </p>
        <p>
          paragraphe 1-2
        </p>
      </div>
    </div>
    <div
      class="c1 c2"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-1"
          aria-disabled="false"
          aria-expanded="false"
          class="c3"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-1"
          role="button"
          tabindex="0"
        >
          <h2>
            titre 2
          </h2>
          <div
            class="c4"
            role="presentation"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-1"
        class="c5"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-1"
      >
        <p>
          paragraphe 2-1
        </p>
        <p>
          paragraphe 2-2
        </p>
        <h3>
          titre 2-1
        </h3>
      </div>
    </div>
    <div
      class="c1 c2"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-2"
          aria-disabled="false"
          aria-expanded="false"
          class="c3"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-2"
          role="button"
          tabindex="0"
        >
          <h2>
            titre 3
          </h2>
          <div
            class="c4"
            role="presentation"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-2"
        class="c5"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-2"
      >
        <p>
          paragraphe 3-1
        </p>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;

exports[`<Accordion /> should render all, siblings included 1`] = `
.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 12px;
}

.c4::after,
.c4::before {
  position: absolute;
  top: 50%;
  display: block;
  width: 10px;
  height: 2px;
  background-color: currentColor;
  -webkit-transition: -webkit-transform 0.25s ease,-webkit-transform 0.25s ease;
  -webkit-transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  content: "";
}

.c4::before {
  left: 4px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

[aria-expanded="true"] .c4::before,
[aria-selected="true"] .c4::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c4::after {
  right: 4px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

[aria-expanded="true"] .c4::after,
[aria-selected="true"] .c4::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c2 + .c1 {
  border-top: 1px solid #c9d3df;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c3:hover,
.c3:focus,
.c3:focus-within,
.c3[aria-expanded="true"] {
  color: #005994;
}

.c5 {
  padding: 1rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c5.accordion__body--hidden {
  display: none;
}

.c0 {
  margin-bottom: 2rem;
}

<div>
  <h5>
    titre 0
  </h5>
  <p>
    paragraphe 0
  </p>
  <div
    class="c0"
    data-accordion-component="Accordion"
  >
    <div
      class="c1 c2"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-3"
          aria-disabled="false"
          aria-expanded="false"
          class="c3"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-3"
          role="button"
          tabindex="0"
        >
          <h5>
            titre 1
          </h5>
          <div
            class="c4"
            role="presentation"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-3"
        class="c5"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-3"
      >
        <p>
          paragraphe 1-1
        </p>
        <p>
          paragraphe 1-2
        </p>
      </div>
    </div>
    <div
      class="c1 c2"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-4"
          aria-disabled="false"
          aria-expanded="false"
          class="c3"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-4"
          role="button"
          tabindex="0"
        >
          <h5>
            titre 2
          </h5>
          <div
            class="c4"
            role="presentation"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-4"
        class="c5"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-4"
      >
        <p>
          paragraphe 2-1
        </p>
        <p>
          paragraphe 2-2
        </p>
        <h6>
          titre 2-1
        </h6>
      </div>
    </div>
    <div
      class="c1 c2"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-5"
          aria-disabled="false"
          aria-expanded="false"
          class="c3"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-5"
          role="button"
          tabindex="0"
        >
          <h5>
            titre 3
          </h5>
          <div
            class="c4"
            role="presentation"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-5"
        class="c5"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-5"
      >
        <p>
          paragraphe 3-1
        </p>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;
